k8s/debezium-connect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debezium-connect
  namespace: flashservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debezium-connect
  template:
    metadata:
      labels:
        app: debezium-connect
    spec:
      containers:
        - name: debezium-connect
          image: quay.io/debezium/connect:2.7.3.Final
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /connectors
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: debezium-connect
  namespace: flashservice
spec:
  selector:
    app: debezium-connect
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
