k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: flashservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.2.0
          ports:
            - containerPort: 9092
            - containerPort: 9093
          readinessProbe:
            tcpSocket:
              port: 9093
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: flashservice
spec:
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 9093
      targetPort: 9093
    - name: host
      port: 9092
      targetPort: 9092
  type: ClusterIP
