k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  namespace: flashservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: user-db
          image: postgres:16
          args:
            - postgres
            - -c
            - wal_level=logical
            - -c
            - max_wal_senders=4
            - -c
            - max_replication_slots=4
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d users
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  namespace: flashservice
spec:
  selector:
    app: user-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
